feat: Add selectable item background to borderless buttons (#1362)

--- a/android/app/src/main/res/layout/activity_speakers.xml
+++ b/android/app/src/main/res/layout/activity_speakers.xml
@@ -117,16 +117,18 @@
                 android:id="@+id/layoutSocialMedia"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/speaker_bio"
-                android:layout_marginBottom="@dimen/layout_margin_large"
-                android:layout_marginLeft="@dimen/layout_margin_large"
-                android:layout_marginRight="@dimen/layout_margin_large">
+                android:layout_marginStart="@dimen/padding_medium"
+                android:layout_marginLeft="@dimen/padding_medium"
+                android:layout_marginEnd="@dimen/padding_medium"
+                android:layout_marginRight="@dimen/padding_medium"
+                android:layout_below="@+id/speaker_bio">
 
                 <ImageView
                     android:id="@+id/imageView_fb"
-                    android:layout_width="@dimen/social_image_icon"
-                    android:layout_height="@dimen/social_image_icon"
-                    android:adjustViewBounds="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/padding_medium"
+                    android:background="?selectableItemBackgroundBorderless"
                     android:clickable="true"
                     android:contentDescription="@string/facebook_icon"
                     android:tag="@string/fb"
@@ -134,11 +136,10 @@
 
                 <ImageView
                     android:id="@+id/imageView_linkedin"
-                    android:layout_width="@dimen/social_image_icon"
-                    android:layout_height="@dimen/social_image_icon"
-                    android:layout_marginLeft="@dimen/layout_margin_large"
-                    android:layout_marginStart="@dimen/layout_margin_large"
-                    android:adjustViewBounds="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/padding_medium"
+                    android:background="?selectableItemBackgroundBorderless"
                     android:clickable="true"
                     android:contentDescription="@string/linkedin_icon"
                     android:tag="@string/linkedin"
@@ -146,11 +147,10 @@
 
                 <ImageView
                     android:id="@+id/imageView_twitter"
-                    android:layout_width="@dimen/social_image_icon"
-                    android:layout_height="@dimen/social_image_icon"
-                    android:layout_marginLeft="@dimen/layout_margin_large"
-                    android:layout_marginStart="@dimen/layout_margin_large"
-                    android:adjustViewBounds="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/padding_medium"
+                    android:background="?selectableItemBackgroundBorderless"
                     android:clickable="true"
                     android:contentDescription="@string/twitter_icon"
                     android:tag="@string/twitter"
@@ -158,11 +158,10 @@
 
                 <ImageView
                     android:id="@+id/imageView_github"
-                    android:layout_width="@dimen/social_image_icon"
-                    android:layout_height="@dimen/social_image_icon"
-                    android:layout_marginLeft="@dimen/layout_margin_large"
-                    android:layout_marginStart="@dimen/layout_margin_large"
-                    android:adjustViewBounds="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/padding_medium"
+                    android:background="?selectableItemBackgroundBorderless"
                     android:clickable="true"
                     android:contentDescription="@string/github_icon"
                     android:tag="@string/github"
@@ -170,11 +169,10 @@
 
                 <ImageView
                     android:id="@+id/imageView_web"
-                    android:layout_width="@dimen/social_image_icon"
-                    android:layout_height="@dimen/social_image_icon"
-                    android:layout_marginLeft="@dimen/layout_margin_large"
-                    android:layout_marginStart="@dimen/layout_margin_large"
-                    android:adjustViewBounds="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/padding_medium"
+                    android:background="?selectableItemBackgroundBorderless"
                     android:clickable="true"
                     android:contentDescription="@string/web_icon"
                     android:tag="@string/website"
