--- a/android/app/src/main/res/menu/menu_session_detail.xml
+++ b/android/app/src/main/res/menu/menu_session_detail.xml
@@ -16,7 +16,7 @@
     <item
         android:id="@+id/action_add_to_calendar"
         android:icon="@drawable/ic_event_white_24dp"
-        android:title="Add to Calendar"
+        android:title="@string/add_to_calendar"
         app:showAsAction="always" />
 
 </menu>
