--- a/android/app/src/main/res/layout/tracksactvity_item.xml
+++ b/android/app/src/main/res/layout/tracksactvity_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
@@ -11,199 +11,179 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="@dimen/layout_margin_medium">
+
+        <LinearLayout
+            android:id="@+id/session_details"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
             <LinearLayout
-                android:id="@+id/session_details"
+                android:id="@+id/titleLinearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/color_primary"
+                android:orientation="horizontal"
+                android:padding="@dimen/padding_medium">
+
+                <TextView
+                    android:id="@+id/session_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/heading_text_size"
+                    android:padding="6dp"
+                    tools:text="Session Title" />
+
+                <ImageView
+                    android:id="@+id/session_bookmark_status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="@string/session_bookmark_status"
+                    android:padding="6dp"
+                    app:srcCompat="@drawable/ic_bookmark_border_white_24dp" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="@dimen/padding_medium">
+
+                <TextView
+                    android:id="@+id/session_subtitle"
+                    style="@style/Base.TextAppearance.AppCompat.Subhead"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    tools:text="Session Subtitle" />
 
                 <LinearLayout
-                    android:id="@+id/titleLinearLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:background="@color/color_primary"
-                    android:orientation="vertical"
-                    android:padding="@dimen/padding_medium">
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/layout_margin_medium"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/trackImageDrawable"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:contentDescription="@string/item_track" />
 
                     <TextView
-                        android:id="@+id/session_title"
+                        android:id="@+id/session_track"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:fontFamily="sans-serif"
-                        android:maxLines="2"
-                        tools:text="Session Title"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/heading_text_size"
-                        tools:targetApi="jelly_bean" />
+                        android:layout_marginLeft="@dimen/layout_margin_large"
+                        android:layout_marginStart="@dimen/layout_margin_large"
+                        android:textColor="@color/primary_text"
+                        android:textSize="@dimen/text_size"
+                        tools:text="Track Name" />
+                </LinearLayout>
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/layout_margin_medium"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/icon_speaker"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:contentDescription="@string/session_speaker_icon"
+                        app:srcCompat="@drawable/ic_speaker_black_24dp" />
+
+                    <TextView
+                        android:id="@+id/session_speaker"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:gravity="end"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:id="@+id/session_bookmark_status"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="6dp"
-                            android:contentDescription="@string/session_bookmark_status"
-                            android:background="?attr/selectableItemBackgroundBorderless"
-                            app:srcCompat="@drawable/ic_bookmark_border_white_24dp" />
-
-                        <ImageView
-                            android:id="@+id/shareImageIcon"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="6dp"
-                            android:contentDescription="@string/session_share_icon"
-                            android:background="?attr/selectableItemBackgroundBorderless"
-                            app:srcCompat="@drawable/ic_share_white_24dp" />
-                    </LinearLayout>
-
+                        android:layout_marginLeft="@dimen/layout_margin_large"
+                        android:layout_marginStart="@dimen/layout_margin_large"
+                        android:textColor="@color/primary_text"
+                        android:textSize="@dimen/text_size"
+                        tools:text="Speaker" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:padding="@dimen/padding_medium">
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/layout_margin_medium"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:contentDescription="@string/session_calender_icon"
+                        app:srcCompat="@drawable/ic_date_range_black_24dp" />
 
                     <TextView
-                        android:id="@+id/session_subtitle"
-                        style="@style/Base.TextAppearance.AppCompat.Subhead"
-                        android:layout_width="match_parent"
+                        android:id="@+id/session_date"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        tools:text="Session Subtitle"
-                        android:textColor="@color/white" />
+                        android:layout_marginLeft="@dimen/layout_margin_large"
+                        android:layout_marginStart="@dimen/layout_margin_large"
+                        android:textColor="@color/primary_text"
+                        android:textSize="@dimen/text_size"
+                        tools:text="Date of Event" />
+                </LinearLayout>
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/layout_margin_medium"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:contentDescription="@string/session_clock_icon"
+                        app:srcCompat="@drawable/ic_schedule_black_24dp" />
+
+                    <TextView
+                        android:id="@+id/session_time"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/layout_margin_medium"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
+                        android:layout_marginLeft="@dimen/layout_margin_large"
+                        android:layout_marginStart="@dimen/layout_margin_large"
+                        android:textColor="@color/primary_text"
+                        android:textSize="@dimen/text_size"
+                        tools:text="Session Timings" />
+                </LinearLayout>
 
-                        <ImageView
-                            android:id="@+id/trackImageDrawable"
-                            android:layout_width="25dp"
-                            android:layout_height="25dp"
-                            android:contentDescription="@string/item_track" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/layout_margin_medium"
+                    android:orientation="horizontal">
 
-                        <TextView
-                            android:id="@+id/session_track"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/layout_margin_large"
-                            android:layout_marginStart="@dimen/layout_margin_large"
-                            tools:text="Track Name"
-                            android:textColor="@color/primary_text"
-                            android:textSize="@dimen/text_size" />
-                    </LinearLayout>
+                    <ImageView
+                        android:id="@+id/icon_location"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:contentDescription="@string/session_location_icon"
+                        app:srcCompat="@drawable/ic_location_on_black_24dp" />
 
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
+                    <TextView
+                        android:id="@+id/session_location"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/layout_margin_medium"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:id="@+id/icon_speaker"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:contentDescription="@string/session_speaker_icon"
-                            app:srcCompat="@drawable/ic_speaker_black_24dp" />
-
-                        <TextView
-                            android:id="@+id/session_speaker"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/layout_margin_large"
-                            android:layout_marginStart="@dimen/layout_margin_large"
-                            tools:text="Speaker"
-                            android:textColor="@color/primary_text"
-                            android:textSize="@dimen/text_size" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/layout_margin_medium"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:contentDescription="@string/session_calender_icon"
-                            app:srcCompat="@drawable/ic_date_range_black_24dp" />
-
-                        <TextView
-                            android:id="@+id/session_date"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/layout_margin_large"
-                            android:layout_marginStart="@dimen/layout_margin_large"
-                            tools:text="Date of Event"
-                            android:textColor="@color/primary_text"
-                            android:textSize="@dimen/text_size" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/layout_margin_medium"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:contentDescription="@string/session_clock_icon"
-                            app:srcCompat="@drawable/ic_schedule_black_24dp" />
-
-                        <TextView
-                            android:id="@+id/session_time"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/layout_margin_large"
-                            android:layout_marginStart="@dimen/layout_margin_large"
-                            tools:text="Session Timings"
-                            android:textColor="@color/primary_text"
-                            android:textSize="@dimen/text_size" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/layout_margin_medium"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:id="@+id/icon_location"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:contentDescription="@string/session_location_icon"
-                            app:srcCompat="@drawable/ic_location_on_black_24dp" />
-
-                        <TextView
-                            android:id="@+id/session_location"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/layout_margin_large"
-                            android:layout_marginStart="@dimen/layout_margin_large"
-                            tools:text="Session Location"
-                            android:textColor="@color/primary_text"
-                            android:textSize="@dimen/text_size" />
-                    </LinearLayout>
+                        android:layout_marginLeft="@dimen/layout_margin_large"
+                        android:layout_marginStart="@dimen/layout_margin_large"
+                        android:textColor="@color/primary_text"
+                        android:textSize="@dimen/text_size"
+                        tools:text="Session Location" />
                 </LinearLayout>
             </LinearLayout>
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
