--- a/android/app/src/main/res/menu/drawer.xml
+++ b/android/app/src/main/res/menu/drawer.xml
@@ -1,4 +1,5 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <group
         android:id="@+id/menu_top"
         android:checkableBehavior="single">
@@ -11,33 +12,40 @@
             android:id="@+id/nav_tracks"
             android:checked="true"
             android:icon="@drawable/ic_event_white_24dp"
+            app:showAsAction="always"
             android:title="@string/menu_tracks" />
         <item
             android:id="@+id/nav_schedule"
             android:checked="true"
             android:icon="@drawable/ic_schedule_grey600_24dp"
+            app:showAsAction="always"
             android:title="@string/menu_schedule" />
 
         <item
             android:id="@+id/nav_bookmarks"
             android:icon="@drawable/ic_bookmark_white_24dp"
+            app:showAsAction="always"
             android:title="@string/menu_bookmarks" />
 
         <item
             android:id="@+id/nav_speakers"
             android:icon="@drawable/ic_people_black_24dp"
+            app:showAsAction="always"
             android:title="@string/menu_speakers" />
         <item
             android:id="@+id/nav_sponsors"
             android:icon="@drawable/ic_sponsors_white_24dp"
+            app:showAsAction="always"
             android:title="@string/menu_sponsor" />
         <item
             android:id="@+id/nav_map"
             android:icon="@drawable/ic_map_white_24dp"
+            app:showAsAction="always"
             android:title="@string/menu_map" />
         <item
             android:id="@+id/nav_locations"
             android:icon="@drawable/ic_location_on_black_24dp"
+            app:showAsAction="always"
             android:title="@string/menu_locations" />
     </group>
 
@@ -47,14 +55,17 @@
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings_black_24dp"
+            app:showAsAction="always"
             android:title="@string/menu_settings" />
         <item
             android:id="@+id/nav_share"
             android:icon="@drawable/ic_share_white_24dp"
+            app:showAsAction="always"
             android:title="@string/menu_share" />
         <item
             android:id="@+id/nav_about"
             android:icon="@drawable/ic_info_black_24dp"
+            app:showAsAction="always"
             android:title="@string/menu_about" />
 
     </group>
