--- a/android/app/src/main/res/layout/content_session_detail.xml
+++ b/android/app/src/main/res/layout/content_session_detail.xml
@@ -163,7 +163,8 @@
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/list_speakerss"
-                    android:layout_width="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:clipToPadding="false"
                     android:paddingBottom="@dimen/padding_medium"
