--- a/android/app/src/main/res/menu/menu_schedule.xml
+++ b/android/app/src/main/res/menu/menu_schedule.xml
@@ -10,4 +10,9 @@
         android:title="@string/search"
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="collapseActionView|ifRoom" />
+    <item
+        android:id="@+id/action_sort"
+        android:icon="@drawable/ic_sort_white_24dp"
+        android:title="@string/menu_speaker_sort"
+        app:showAsAction="always" />
 </menu>
