--- a/android/app/src/googleplay/res/layout/fragment_map.xml
+++ b/android/app/src/googleplay/res/layout/fragment_map.xml
@@ -1,5 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/map"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <AutoCompleteTextView
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:padding="10dp"
+            android:textColor="@color/color_accent"
+            android:hint="@string/search"
+            android:elevation="1dp"
+            android:layout_marginTop="5dp"
+            android:id="@+id/autoCompleteTextView"
+            android:layout_marginLeft="85dp"
+            android:layout_marginRight="85dp"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal|top" />
+    </FrameLayout>
