--- a/android/app/src/main/res/values/color.xml
+++ b/android/app/src/main/res/values/color.xml
@@ -10,6 +10,7 @@
     <color name="secondary_text">#727272</color>
     <color name="translucent_grey">#0c000000</color>
     <color name="grey">#E0E0E0</color>
+    <color name="dark_grey">#A9A9A9</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="speakers_listview_primary">#de000000</color>
