--- a/android/app/src/main/res/layout/content_session_detail.xml
+++ b/android/app/src/main/res/layout/content_session_detail.xml
@@ -192,7 +192,7 @@
                 </android.support.v7.widget.CardView>
 
                 <android.support.v7.widget.RecyclerView
-                    android:id="@+id/list_speakerss"
+                    android:id="@+id/list_speakers"
                     android:layout_width="wrap_content"
                     android:layout_gravity="center"
                     android:layout_height="wrap_content"
