feat: Add theming to app generator (#1834)

--- a/android/app/src/main/res/values/color.xml
+++ b/android/app/src/main/res/values/color.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Need to replace generator colors if changed -->
     <color name="color_primary">#F44336</color>
     <color name="color_primary_dark">#D32F2F</color>
     <color name="color_accent">#B71C1C</color>
