--- a/apk-generator/v2/app/templates/index.html
+++ b/apk-generator/v2/app/templates/index.html
@@ -18,6 +18,7 @@
             integrity="sha256-EPrkNjGEmCWyazb3A/Epj+W7Qm2pB9vnfXw+X6LImPM=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
           integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous"/>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-colorpicker/2.5.1/css/bootstrap-colorpicker.min.css">
 </head>
 
 <body>
@@ -57,19 +58,48 @@
             </div>
         </section>
 
-	<label> Choose Build Type </label>
-	<ul style="list-style-type:none">
-		<li>
-                	<label style="font-weight: 300">
-                    	<input type="radio" name="build-type" value="googleplay" required/> Google Play
-                	</label>
-            	</li>
-            	<li>
-                	<label style="font-weight: 300">
-                    	<input type="radio" name="build-type" value="fdroid" required/> FDroid
-                	</label>
-            	</li>	
-	</ul>	
+        <section id="build-type-holder">
+            <label> Choose Build Type </label>
+            <ul style="list-style-type:none">
+                <li>
+                    <label style="font-weight: 300">
+                        <input type="radio" name="build-type" value="googleplay" required/> Google Play
+                    </label>
+                </li>
+                <li>
+                    <label style="font-weight: 300">
+                        <input type="radio" name="build-type" value="fdroid" required/> FDroid
+                    </label>
+                </li>
+            </ul>
+        </section>
+
+        <label>App Theme Colors</label>
+        <section id="app-theme-holder" class="row">
+            <div class="col-md-12 col-lg-4" style="padding: 2px;">
+                <p>Primary</p>
+                <div id="cp-primary" class="input-group colorpicker-component">
+                    <input id="color-primary" type="text" value="{{ colors['primary'] }}" class="form-control" />
+                    <span class="input-group-addon"><i></i></span>
+                </div>
+            </div>
+            <div class="col-md-12 col-lg-4" style="padding: 2px;">
+                <p>Primary Dark</p>
+                <div id="cp-primary-dark" class="input-group colorpicker-component">
+                    <input id="color-primary-dark" type="text" value="{{ colors['primary_dark'] }}" class="form-control" />
+                    <span class="input-group-addon"><i></i></span>
+                </div>
+            </div>
+            <div class="col-md-12 col-lg-4" style="padding: 2px;">
+                <p>Accent</p>
+                <div id="cp-accent" class="input-group colorpicker-component">
+                    <input id="color-accent" type="text" value="{{ colors['accent'] }}" class="form-control" />
+                    <span class="input-group-addon"><i></i></span>
+                </div>
+            </div>
+        </section>
+
+        <br />
 
         <div style="text-align: center;">
 
@@ -101,6 +131,7 @@
         integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.15.3/axios.min.js"
         integrity="sha256-xEofWHiBewJOBXBSH5JHWuwCYpBKOQ8KSGSVLbEVYyo=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-colorpicker/2.5.1/js/bootstrap-colorpicker.min.js" type="text/javascript"></script>
 <script src="static/js/utils.js?hash={{ utils_js }}"></script>
 <script src="static/js/main.js?hash={{ main_js }}"></script>
 </body>
